fix: style on article of Post component does not apply
Due to extra div in article tag, direct style application are not
work and cause some layout problems.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -50,7 +50,7 @@
 
   h1,
   .h1 {
-    @apply text-center text-2xl font-bold md:text-4xl;
+    @apply pb-4 text-center text-2xl font-bold md:text-4xl;
   }
 
   h2,
